# dotat

./: .gitignore  CMakeLists.txt  CZYTAJTO.txt  FindCppUnit.cmake  dotat.cpp  dotat.hpp  dotatrun.cpp  testdotat.cpp  testdotat.hpp
examples/: fib.@  getline.@  getput.@  hello.@  tail_rec.@
